<resources>
    <string name="app_name">Final Application</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="number_of_incorrect_attempts">Number of incorrect attempts</string>
    <string name="name">Name</string>

    <string name="new_user_sing_up_here">New User ? Sign up here</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="click_here">Click Here</string>

    <string name="forgot_password">Forgot Password ?</string>

    <string name="reset_password">Reset Password</string>
    <string name="enteremail">Enter Email</string>
    <string name="adresss">address</string>


    <string name="view_my_bookings">View My Bookings</string>

    <string name="select_a_community_below_please">Select A Community Below Please</string>
    <string name="any_addtional_notes_for_the_delivery_pickup_man">Any Additional Notes For the Delivery Pickup Man ?</string>

    <string name="create_a_booking">Create A Booking ?</string>
    <string name="view_my_donation_history">View My Donation History</string>
    <string name="logout">Logout</string>
    <string name="view_and_cancel_my_bookings_here">View and Cancel My Bookings Here</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="main_page_click_here">Main Page ? Click Here</string>
    <string name="date">Date</string>
    <string name="home_address">Home Address</string>
    <string name="time">Time</string>
    <string name="any_additional_notes">Any Additional Notes ?</string>
    <string name="button">Button</string>
    <string name="go_back_to_login_page">Go back to login page ?</string>
    <string name="already_have_an_account_click_here">Already have an account ? Click Here</string>
    <string name="lastname">LastName</string>
    <string name="click_to_regsiter">Click To Regsiter</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="clothing_coperates">Clothing Coperates</string>
    <string name="making_donating_clothes_one_step_easier">Making donating clothes one step easier</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="its_time_to_give_it">Its time to give it</string>
    <string name="choose_what_you_want_to_do_from_below">Choose what you want to do from below ?</string>
    <string name="choose_what_you_want_to_do_below">Choose what you want to do below ?</string>
    <string name="magicians_coperates">Magicians Coperates</string>
    <string name="welcome">Welcome</string>
    <string name="magicians_corporates">Magicians Corporates</string>
    <string name="copyright_magicians_corporates_2019">Copyright © Magicians Corporates 2019</string>
    <string name="what_i_donated">What I Donated</string>
    <string name="my_donation_history">My Donation History</string>

    <string name="donated_to">Donated To</string>
    <string name="textview">TextView</string>
    <string name="male_clothing_kids_clothing_and_shoes">Male clothing, Kids Clothing and Shoes</string>
    <string name="neeraj">Neeraj</string>
    <string name="gangrade">Gangrade</string>
    <string name="smiths_community_red_amry_and_clothing_coporates">Smiths Community, Red Amry and Clothing Coporates</string>

    <string-array name = "communities">
        <item>Select A Community</item>
        <item>Red Army</item>
        <item>Salvation Army</item>
        <item>Family Goods</item>
        <item>Smith Family</item>
        <item>Clothing coperates</item>
        <item>Swiss family </item>
        <item>City clothing</item>
        <item>Vinies Army </item>
        <item>Care Family</item>
        <item>Donate to us Army</item>
        <item>Astro Army </item>
        <item>Blue clothing </item>
        <item>Watching clothing </item>


    </string-array>
</resources>
